alterações na pagina sobre

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <div>
             <ul class="navbar" id="navbar">
               <li><a href="index.html">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
+              <li><a href="shop.html">Loja</a></li>
               <li><a href="blog.html">Blog</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="about.html">Sobre</a></li>
+              <li><a href="contact.html">Contato</a></li>
               <li class="lg-bag">
                 <a href="cart.html"><i class="bx bx-shopping-bag"></i></a>
               </li>
@@ -46,11 +46,11 @@
       <section class="home_section">
         <div class="container">
           <div class="hero" id="hero">
-            <h4>Trade-in-offer</h4>
-            <h2>Super value deals</h2>
-            <h1>On all products</h1>
-            <p>Save more with coupons & up to 70% off!</p>
-            <button>Shop Now</button>
+            <h4>Melhores Ofertas!</h4>
+            <h2>Super desconto</h2>
+            <h1>Em todos os produtos</h1>
+            <p>Utilize cupons com 70% de desconto!</p>
+            <button>Compre Agora</button>
           </div>
         </div>
       </section>
